[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/chars/mobs/mob1.png" type="Texture" id=1]
[ext_resource path="res://src/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/ex/explo.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 75, 121 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 75, 121 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 75, 0, 75, 121 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 150, 0, 75, 121 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 225, 0, 75, 121 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 60 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 50, 70 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 188, 182 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 188, 0, 188, 182 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 376, 0, 188, 182 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 564, 0, 188, 182 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "explosion",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 7 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
self_modulate = Color( 1, 0.960784, 0, 1 )
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
visible = false
self_modulate = Color( 1, 0, 0, 1 )
shape = SubResource( 8 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 27.5003, -2.80617 )
frames = SubResource( 9 )
animation = "explosion"
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
